# coinmetrics-fetcher

./: .env.example  .gitignore  README.md  USAGE.md  coinmetrics-openapi.json  config.py  demo.ipynb  pyproject.toml
api/: __init__.py  base.py  base_fetcher.py  cached_api.py  funding_rates.py  futures.py  options.py  reference_data.py  spot.py  timeseries.py
api/core/: __init__.py  reference_data.py  timeseries.py
api/fetchers/: __init__.py  funding_rates.py  futures.py  options.py  spot.py
notebooks/: greeks_iv_fetcher.ipynb
utils/: __init__.py  cache.py  fetch_utils.py
