[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coinmetrics-fetcher"
version = "0.1.0"
description = "CoinMetrics API v4 Python 客户端封装"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HakureiPOI"}
]
keywords = ["coinmetrics", "crypto", "api", "bitcoin", "ethereum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/HakureiPOI/coinmetrics-fetcher"
Repository = "https://github.com/HakureiPOI/coinmetrics-fetcher"

[tool.setuptools.packages.find]
include = ["api*", "utils*"]